--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ version: 0.3.5 # NO TOCAR
 # Configuración Global
 html:
 # title: Este valor no funciona porque esta comentado
-  title: Links | Mi Nombre # Este es el Título que aparece en la pestaña de navegador
+  title: Links | Seba Ibañez # Este es el Título que aparece en la pestaña de navegador
 
 # Colores de plantilla
 theme:
@@ -15,7 +15,7 @@ theme:
 
 # Configuración Central
 main:
-  title: Mi Nombre # Aca podes poner tu nombre o el de tu producto
+  title: Negr0 # Aca podes poner tu nombre o el de tu producto
 
 # Lista de bloques
 blocks:
@@ -24,27 +24,27 @@ blocks:
 
   - title: Instagram
     icon: instagram
-    url: https://www.instagram.com/lacryptaok/
+    url: https://www.instagram.com/seba_ibanez/
 
-# - title: Twitter
-#   icon: twitter
-#   url: https://twitter.com/TU-USUARIO
+  - title: Twitter
+    icon: twitter
+    url: https://twitter.com/negr_0
     
 # - title: LinkedIn # Este es el nombre del botón
 #   icon: linkedin # Este es el nombre del icono (si queres añadir una red social nueva, prestá atencion que es todo con minúscula)
 #   url: https://linkedin.com/in/TU-USUARIO # Link a donde redireccionará al hacer click
 
-# - title: Github
-#   icon: github
-#   url: https://github.com/TU-USUARIO
+  - title: Github
+    icon: github
+    url: https://github.com/Negr087
 
 # - title: Sitio Web
 #   icon: url
 #   url: https://www.TU-WEB.com
 
-# - title: Telegram
-#   icon: telegram
-#   url: https://t.me/TU-USUARIO
+  - title: Telegram
+    icon: telegram
+    url: https://t.me/spibanez87
     
 # Guardá el archivo haciendo click en Commit Changes, abajo
 # Volvé a las instrucciones
