--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ version: 0.3.5 # NO TOCAR
 # Configuración Global
 html:
 # title: Este valor no funciona porque esta comentado
-  title: Links | Seba Ibañez # Este es el Título que aparece en la pestaña de navegador
+  title: Links | Fierillo # Este es el Título que aparece en la pestaña de navegador
 
 # Colores de plantilla
 theme:
@@ -15,7 +15,7 @@ theme:
 
 # Configuración Central
 main:
-  title: Negr0 # Aca podes poner tu nombre o el de tu producto
+  title: Fierillo # Aca podes poner tu nombre o el de tu producto
 
 # Lista de bloques
 blocks:
@@ -24,11 +24,11 @@ blocks:
 
   - title: Instagram
     icon: instagram
-    url: https://www.instagram.com/seba_ibanez/
+    url: 
 
   - title: Twitter
     icon: twitter
-    url: https://twitter.com/negr_0
+    url: https://twitter.com/fierillo
     
 # - title: LinkedIn # Este es el nombre del botón
 #   icon: linkedin # Este es el nombre del icono (si queres añadir una red social nueva, prestá atencion que es todo con minúscula)
@@ -36,7 +36,7 @@ blocks:
 
   - title: Github
     icon: github
-    url: https://github.com/Negr087
+    url: https://github.com/fierillo
 
 # - title: Sitio Web
 #   icon: url
@@ -44,7 +44,7 @@ blocks:
 
   - title: Telegram
     icon: telegram
-    url: https://t.me/spibanez87
+    url: https://t.me/fierillo
     
 # Guardá el archivo haciendo click en Commit Changes, abajo
 # Volvé a las instrucciones
